bug 193324: [Sync View] Provide compare editor input for a single file that support editing on both sides

--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -548,3 +548,11 @@ TeamAction_errorTitle=Errors occurred
 TeamAction_handlerNotEnabledTitle=Warning
 TeamAction_handlerNotEnabledMessage=The action doesn't apply to the current selection.
 SaveableCompareEditorInput_0=Show In
+SaveablesCompareEditorInput_twoWayTitle=Compare (''{0}'' - ''{1}'')
+SaveablesCompareEditorInput_twoWayTooltip=Two-way compare of ''{0}'' with ''{1}''
+SaveablesCompareEditorInput_threeWayTitle=Compare (''{0}'' - ''{1}'' - ''{2}'')
+SaveablesCompareEditorInput_threeWayTooltip=Three-way compare of ''{1}'' and ''{2}'' relative to common ancestor ''{0}''
+
+SelectAncestorDialog_title=Select Common Ancestor
+SelectAncestorDialog_message=Which resource would you like to use as the common ancestor in the three-way compare?
+SelectAncestorDialog_option=''{0}''
