bug 256562: Possibly broken code in TeamContentProviderDescriptor.readExtension(IExtension)

--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -416,6 +416,7 @@ TeamCompareEditorInput_different=Cannot compare resources of different kind.
 TeamCompareEditorInput_new=File is new
 TeamCompareEditorInput_deleted=File has been deleted
 TeamContentProviderDescriptor_1=Attribute {0} of extension point {1} missing for extension with identifier {2}
+TeamContentProviderDescriptor_2=Wrong number of {0} elements for extension with identifier {1}.
 
 TeamCompareEditorInput_fileProgress=Comparing file: {0}
 
