Bug 150161 - Have IllegalArgumentException in org.eclipse.core.internal.resources.MarkerInfo.checkValidAttribute(Object) provide the name of the class

--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -152,6 +152,7 @@ resources_errorContentDescription = Error retrieving content description for res
 resources_errorDeleting = Error deleting resource ''{0}'' from the workspace tree.
 resources_errorMarkersDelete = Error deleting markers for resource ''{0}''.
 resources_errorMarkersMove = Error moving markers from resource ''{0}'' to ''{1}''.
+resources_wrongMarkerAttributeValueType = "The attribute value type is {0} and expected is one of java.lang.String, Boolean, Integer"
 resources_errorMembers = Error retrieving members of container ''{0}''.
 resources_errorMoving = Error moving resource ''{0}'' to ''{1}'' in the workspace tree.
 resources_errorNature = Error configuring nature ''{0}''.
