bug 80577: [Repo View] Author not shown in remote compares

--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -29,6 +29,7 @@ ok=OK
 separator=/
 
 nameAndRevision={0} {1}
+nameRevisionAndAuthor={0} {1} ({2})
 currentRevision=*{0}
 
 AddAction_addFailed=Error occurred during Add
