--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -41,11 +41,14 @@ exception=An exception occurred
 
 
 SyncInfoCompareInput_localLabel=Local File
-SyncInfoCompareInput_localLabelExists=Local File ({0})
+SyncInfoCompareInput_localLabelExists=Local File {0}
+SyncInfoCompareInput_localLabelAuthorExists=Local File {0} ({1})
 SyncInfoCompareInput_remoteLabel=Remote File
 SyncInfoCompareInput_baseLabel=Common Ancestor
-SyncInfoCompareInput_remoteLabelExists=Remote File ({0})
-SyncInfoCompareInput_baseLabelExists=Common Ancestor ({0})
+SyncInfoCompareInput_remoteLabelExists=Remote File {0}
+SyncInfoCompareInput_remoteLabelAuthorExists=Remote File {0} ({1})
+SyncInfoCompareInput_baseLabelExists=Common Ancestor {0}
+SyncInfoCompareInput_baseLabelAuthorExists=Common Ancestor {0} ({1})
 SyncInfoCompareInput_title={0}
 SyncInfoCompareInput_0=File Changed
 SyncInfoCompareInput_1=File has changed outside of this compare editor. What do you want to do?
