bug 120602: [History View] Should have an Open With

--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -1086,6 +1086,7 @@ CVSTeamProvider_updatingFile=Updating {0}
 CVSHistoryTableProvider_base=<base>
 CVSHistoryPage_LocalModeAction=Local Mode
 CVSHistoryPage_OpenAction=&Open
+CVSHistoryPage_OpenWithMenu=Open &With
 CVSHistoryPage_GroupByDate=Group Revisions by Date
 CVSHistoryPage_Today=Today
 CVSHistoryPage_Yesterday=Yesterday
