--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -454,6 +454,11 @@ LocalHistoryTableProvider_localRevision=<local revision>
 LocalHistoryPage_openRevision=Open Revision
 LocalHistoryPage_CompareAction=&Compare
 LocalHistoryPage_OpenAction=&Open
+LocalHistoryPage_OpenWithMenu=Open &With
+LocalHistoryPage_OpenWithMenu_Other=Other...
+LocalHistoryPage_OpenWithMenu_OtherDialogDescription=Choose the editor for opening {0}:
+LocalHistoryPage_OpenWithMenu_DefaultEditorDescription=&Default Editor
+LocalHistoryPage_OpenEditorError=A problem occurred while opening the editor
 LocalHistoryPage_0=Local History ({0})
 LocalHistoryPage_1=Workspace File
 LocalHistoryPage_GetContents=Get Contents
