Bug 254558 WordMergeViewer.openComparison threw CoreException: " Invalid property name: Close."

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/src/org/eclipse/compare/internal/win32/messages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/src/org/eclipse/compare/internal/win32/messages.properties
@@ -8,7 +8,8 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-
+# NLS_ENCODING=UTF-8
+# NLS_MESSAGEFORMAT_VAR
 WordMergeViewer_1=Word Document Compare
 WordMergeViewer_2=Inplace
 WordMergeViewer_3=<unknown>
