Bug 249924  [Help] 'Content' preference page uses a TabFolder when there is only one item

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -182,7 +182,7 @@ IndexButton = Display
 
 NoWorkbenchForExecuteCommand_msg = No workbench available for command execution.
 
-HelpContentPage_title = Remote Infocenters
+HelpContentPage_title = Remote Infocenters:
 HelpContentBlock_addICTitle = Add
 HelpContentBlock_editICTitle = Edit 
 HelpContentBlock_removeICTitle = Delete
