Bug 249921  [Help] 'Content' preference page has awful dialogs

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -188,8 +188,9 @@ HelpContentBlock_editICTitle = Edit
 HelpContentBlock_removeICTitle = Delete
 HelpContentBlock_viewICTitle = View Properties
 HelpContentBlock_testConnectionTitle = Test Connection
+HelpContentBlock_rmvTitle=Remove {0} Infocenter
+HelpContentBlock_rmvLabel=Are you sure you want to remove {0}?
 AddICDialog_2=Add new infocenter
-AddICDialog_3=Location
 AddICDialog_4=Name:
 AddICDialog_5=&Host:
 AddICDialog_7=&Path:
@@ -202,7 +203,6 @@ HelpContentBlock_3=Disable
 HelpContentBlock_4=Enable
 
 EditICDialog_7=Edit {0} infocenter
-EditICDialog_9=Location
 EditICDialog_10=Name:
 EditICDialog_11=&Host:
 EditICDialog_12=&Path:
@@ -214,21 +214,14 @@ RemoteICLabelProvider_5=Disabled
 RemoteICViewer_Enabled=Enabled
 RemoteICViewer_Name=Name
 RemoteICViewer_URL=URL
-RestoreDefaultsDialog_1=Restore Defaults
-RestoreDefaultsDialog_2=Warning
-RestoreDefaultsDialog_3=This operation will clear out all user defined infocenters.\n\nClick OK to proceed with this operation.\n\nNote: Clicking cancel on the next pane will Undo this operation.
-RemoveICDialog_2=Remove {0} Infocenter
-RemoveICDialog_4=&Location
-RemoveICDialog_5=Are you sure you want to remove {0}
+
 TestConnectionDialog_4=Test Connection
-TestConnectionDialog_5=Test Connection Status
 TestConnectionDialog_6=Testing Connection to {0}
 TestConnectionDialog_12=Connection Status: Successful
 TestConnectionDialog_13=Connection Status: Failed
 ViewICPropsDialog_6=Test Connection
 ViewICPropsDialog_7=Close
 ViewICPropsDialog_8=Properties for {0}
-ViewICPropsDialog_9=Location
 ViewICPropsDialog_10=Name:
 ViewICPropsDialog_11=&Host:
 ViewICPropsDialog_12=&Path:
