Bug 258666 When installing a feature using the standalone InstallCommand in org.eclipse.update.core, there is a System.out.println() which outputs that the feature has been installed but it is missing white spaces and looks mushed together

--- a/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
+++ b/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
@@ -256,11 +256,9 @@ Standalone_noSite=Cannot find site:
 Standalone_noSite3=No site specified
 Standalone_noConfiguredSite=Cannot find configured site:
 Standalone_installing=Installing feature
-Standalone_notFound= cannot be found on
-Standalone_newerInstalled=\nor a newer version is already installed.
+Standalone_notFoundOrNewer=Feature {0} cannot be found on {1} \nor a newer version is already installed.
 Standalone_duplicate=Duplicate conflicts
-Standalone_feature=Feature
-Standalone_installed= has successfully been installed
+Standalone_installed= Feature {0} has successfully been installed
 Standalone_cannotInstall=Cannot install feature
 Standalone_noFeatures1=There are no unconfigured features with id {0}
 Standalone_noFeatures2=Cannot find unconfigured feature  {0} with version {1}
@@ -276,7 +274,7 @@ Standalone_cmdCompleteWithErrors = Command completed with errors. Please check l
 Standalone_cmdOK = Command completed successfully.
 Standalone_updating = Begin updating
 Standalone_noUpdate = Feature {0} cannot be updated.
-Standalone_updated= has successfully been updated.
+Standalone_updated= Feature {0} has successfully been updated.
 SiteFilePluginContentConsumer_unableToDelete=Unable to delete {0}
 SiteFilePackedPluginContentConsumer_unableToDelete=Unable to delete {0}
 
