--- a/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
+++ b/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
@@ -30,7 +30,7 @@ Feature_UnableToInitializeFeatureReference= Unable to initialize feature referen
 FeatureContentProvider_Downloading= Downloading:
 FeatureContentProvider_UnableToRetrieve= Unable to retrieve remote reference \"{0}\".
 FeatureContentProvider_UnableToCreate= Unable to create local file \"{0}\".
-FeatureContentProvider_ExceptionDownloading = An exception occured while downloading feature from \"{0}\".
+FeatureContentProvider_ExceptionDownloading = An exception occurred while downloading feature from \"{0}\".
 InstallHandler_unableToCreateHandler = Unable to create custom install handler for feature \"{0}\".
 InstallHandler_notFound = Custom install handler required by feature \"{0}\" was not found.
 InstallHandler_invalidHandler = Feature \"{0}\" contains invalid custom install handler.
