Fix for Bug 257956 - [Markers] Improvement requests to Problems View / Configure Contents dialog

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -177,6 +177,7 @@ MarkerFilter_defaultFilterName=Default
 MarkerFilter_newFilterName=New Filter
 MarkerFilter_filtersTitle=User f&ilters:
 MarkerFilter_addFilterName=&New...
+MarkerFilter_cloneFilterName=&Duplicate...
 MarkerFilter_deleteSelectedName = Remo&ve
 MarkerFilter_showAllCommand_title = &Show All
 MarkerFilter_ConfigureContentsCommand_title = &Configure Contents...
