bug 229355 [CommonNavigator] add "with" to "link editor"

--- a/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
+++ b/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
@@ -33,7 +33,7 @@ Paste=Paste
 CommonFilterSelectionDialog_Available_Filters=Filters
 StructuredViewerManager_0=Refresh Common Viewer Tree
 LinkEditorActionDelegate_1=Link open editors with content in the Navigator
-LinkEditorActionDelegate_0=&Link Editor
+LinkEditorActionDelegate_0=&Link With Editor
 Copy=Copy 
 Cut=Cut
 NavigatorViewerDescriptor_Popup_Menu_Overridden=Warning\: popupMenuId of "{0}" was overridden\: old value \= "{1}", new value \= "{2}".
