bug 187137 [CommonNavigator] Project Explorer Link with Editor tooltip verbose and truncated

--- a/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
+++ b/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
@@ -32,8 +32,8 @@ TextAction_selectAll=Select All
 Paste=Paste 
 CommonFilterSelectionDialog_Available_Filters=Filters
 StructuredViewerManager_0=Refresh Common Viewer Tree
-LinkEditorActionDelegate_1=Link open editors with content in the Navigator
-LinkEditorActionDelegate_0=&Link With Editor
+LinkEditorActionDelegate_1=Link with Editor
+LinkEditorActionDelegate_0=&Link with Editor
 Copy=Copy 
 Cut=Cut
 NavigatorViewerDescriptor_Popup_Menu_Overridden=Warning\: popupMenuId of "{0}" was overridden\: old value \= "{1}", new value \= "{2}".
