--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -992,7 +992,7 @@ GenerateDiffFileWizard_8=S&election
 GenerateDiffFileWizard_9=Save Patch
 GenerateDiffFileWizard_10=Patch Root
 GenerateDiffFileWizard_11=Include Binary Files?
-GenerateDiffFileWizard_12=The selected resources include files marked as binary. CVS does not handle the creation of patches for binary files. Should the files marked as binary be included?
+GenerateDiffFileWizard_12=The selected resources include files marked as binary: e.g. {0}.\n\nCVS does not handle the creation of patches for binary files. Should the files marked as binary be included?
 GenerateDiffFileWizard_File_multisegments=File name cannot contain multiple segments
 GenerateDiffFileWizard_SelectAll=Select &All
 GenerateDiffFileWizard_DeselectAll=&Deselect All
