Fix for Bug 250807 - [Markers] Delete handler in problems view should spawn a job

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -613,6 +613,9 @@ ResourceSelectionDialog_message = Select the resources:
 
 MarkerResolutionSelectionDialog_title = Quick Fix
 MarkerResolutionSelectionDialog_messageLabel = &Available fixes:
+MarkerDeleteHandler_JobTitle = Delete Markers
+MarkerDeleteHandler_JobMessageLabel = Deleting selected markers 
+	
 
 FilteredResourcesSelectionDialog_showDerivedResourcesAction=Show &Derived Resources
 
