bug 189490 [CommonNavigator] Go To->Resource won't enable bug 189492 [CommonNavigator] Project Explorer - Go Into won't enable

--- a/bundles/org.eclipse.ui.navigator.resources/src/org/eclipse/ui/internal/navigator/resources/plugin/messages.properties
+++ b/bundles/org.eclipse.ui.navigator.resources/src/org/eclipse/ui/internal/navigator/resources/plugin/messages.properties
@@ -31,3 +31,10 @@ CopyAction_Cop_=Copy
 CopyAction_Copy_selected_resource_s_=Copy selected resource(s)
 PasteAction_Past_=Paste
 PasteAction_Paste_selected_resource_s_=Paste selected resource(s)
+GotoResourceDialog_GoToTitle=Go To Resource
+WorkingSetActionProvider_multipleWorkingSets=Multiple Working Sets
+ProjectExplorer_toolTip= Working Set: {0}
+ProjectExplorer_toolTip2= {0} - Working Set: {1}
+ProjectExplorer_toolTip3= {0}/{1}
+ProjectExplorerPart_workspace=Workspace
+ProjectExplorerPart_workingSetModel=Working Sets
