Bug 241885  [Intro]Option to always launch to Welcome until user chooses not to

--- a/org.eclipse.ui.intro/src/org/eclipse/ui/internal/intro/impl/Messages.properties
+++ b/org.eclipse.ui.intro/src/org/eclipse/ui/internal/intro/impl/Messages.properties
@@ -54,3 +54,7 @@ IntroLaunchBar_restore_tooltip=Restore Welcome
 # -------
 IntroPart_showContentButton_tooltip = Show Intro Tree
 IntroPart_openExternal_tooltip = Open External Browser
+
+
+#Always welcome checkbox
+AlwaysWelcomeCheckbox_Text=Always show Welcome at start up
