--- a/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
+++ b/bundles/org.eclipse.ui.navigator/src/org/eclipse/ui/internal/navigator/messages.properties
@@ -43,3 +43,4 @@ CommonFilterSelectionDialog_enter_name_of_filte_=enter name of filter
 CommonSorterDescriptorManager_A_navigatorContent_extesnion_in_0_=A navigatorContent extesnion in {0} is missing an id.
 FilterDialogSelectionListener_Enable_the_0_filter_=Enable the {0} filter.
 NavigatorContentServiceLabelProvider_Error_no_label_provider_for_0_=Error: no label provider for {0}
+CommonViewerSorter_NoContentExtensionForObject=Cannot find navigator content extension (using triggerPoints) for object "{0}" parent path: "{1}".  Check that you have an expression for this object in a navigatorContent triggerPoints or enablement.
