bug 87390: [Tags] Warn when entering future date tag

--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -1139,6 +1139,8 @@ DateTagDialog_2=Time:
 DateTagDialog_3=Time is local
 DateTagDialog_4=Time is in universal time coordinates (UTC)
 DateTagDialog_5=Create Date Tag
+DateTagDialog_6=Future date tag warning
+DateTagDialog_7=You have entered future date tag. Do you wish to continue?
 
 LogEntryCacheUpdateHandler_0=Errors have occurred while maintaining the log entry cache.
 LogEntryCacheUpdateHandler_1=Updating revision histories
