bug 262642: [Repo View] Add filter to hide modules

--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -525,7 +525,14 @@ RepositoriesSortingActionGroup_host=&Host
 RepositoriesSortingActionGroup_location=L&ocation
 RepositoriesSortingActionGroup_descending=D&escending
 RepositoriesView_CannotGetRevision=Cannot get revision
+RepositoriesView_NoFilter=&Remove Filters
+RepositoriesView_FilterOn=&Filter...
+RepositoriesView_FilterRepositoriesTooltip=Repositories Filter
 RemoteViewPart_workingSetToolTip=Working Set: {0}
+
+RepositoryFilterDialog_title=Filter Repositories
+RepositoryFilterDialog_message=Select filter criteria:
+RepositoryFilterDialog_showModules=Show &modules
 
 ResourcePropertiesPage_status=Status
 ResourcePropertiesPage_notManaged=Not managed by CVS
@@ -534,13 +541,6 @@ ResourcePropertiesPage_notVersioned=not versioned
 #ResourcePropertiesPage.baseRevision=Base Revision
 #ResourcePropertiesPage.none=none
 ResourcePropertiesPage_error=Error
-
-
-
-
-
-
-
 
 SharingWizard_autoConnectTitle=Connect Project to Repository
 SharingWizard_autoConnectTitleDescription=Project is already configured with CVS repository information.
