bug 256934 clean up compile warnings

--- a/bundles/org.eclipse.ui.navigator.resources/src/org/eclipse/ui/internal/navigator/resources/plugin/messages.properties
+++ b/bundles/org.eclipse.ui.navigator.resources/src/org/eclipse/ui/internal/navigator/resources/plugin/messages.properties
@@ -38,3 +38,4 @@ ProjectExplorer_toolTip2= {0} - Working Set: {1}
 ProjectExplorer_toolTip3= {0}/{1}
 ProjectExplorerPart_workspace=Workspace
 ProjectExplorerPart_workingSetModel=Working Sets
+ResourceMgmtActionProvider_logTitle=Exception in {0}. run: {1}
