bug 235848: [Preferences] Password Management page seems to be obsolete

--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -330,14 +330,16 @@ ConfigurationWizardMainPage_userName=&User:
 ConfigurationWizardMainPage_password=&Password:
 ConfigurationWizardMainPage_host=&Host:
 ConfigurationWizardMainPage_0=Location already exists.
-ConfigurationWizardMainPage_5=The host name must not start or end with a space
-ConfigurationWizardMainPage_6=The user name must not start or end with a space
 ConfigurationWizardMainPage_1=User Name Required
 ConfigurationWizardMainPage_2=Host Required
 ConfigurationWizardMainPage_3=Port Required
 ConfigurationWizardMainPage_4=Repository Path Required
+ConfigurationWizardMainPage_5=The host name must not start or end with a space
+ConfigurationWizardMainPage_6=The user name must not start or end with a space
 ConfigurationWizardMainPage_7=<a>Configure connection preferences...</a>
 ConfigurationWizardMainPage_8=You can also paste a full repository location into this field (e.g. :pserver:anonymous@dev.eclipse.org:/cvsroot/eclipse)
+ConfigurationWizardMainPage_9=org.eclipse.equinox.security.ui.storage
+ConfigurationWizardMainPage_10=To manage your password, please see <a>''{0}''</a>
 ConfigurationWizardMainPage_useDefaultPort=Use default p&ort
 ConfigurationWizardMainPage_usePort=Use por&t:
 ConfigurationWizardMainPage_repositoryPath=&Repository path:
