--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -555,6 +555,8 @@ TeamAction_errorTitle=Errors occurred
 TeamAction_handlerNotEnabledTitle=Warning
 TeamAction_handlerNotEnabledMessage=The action doesn't apply to the current selection.
 SaveableCompareEditorInput_0=Show In
+
+NotFound={0} not found
 SaveablesCompareEditorInput_twoWayTitle=Compare (''{0}'' - ''{1}'')
 SaveablesCompareEditorInput_twoWayTooltip=Two-way compare of ''{0}'' with ''{1}''
 SaveablesCompareEditorInput_threeWayTitle=Compare (''{0}'' - ''{1}'' - ''{2}'')
