Bug 255172 [Import/Export] Warning message in the import wizard is not so helpful

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/wizards/datatransfer/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/wizards/datatransfer/messages.properties
@@ -88,7 +88,7 @@ WizardProjectsImportPage_SelectDialogTitle=Select root directory of the projects
 WizardProjectsImportPage_SearchingMessage=Searching for projects
 WizardExternalProjectImportPage_errorMessage = Creation Problems
 WizardProjectsImportPage_ImportProjectsTitle=Import Projects
-WizardProjectsImportPage_projectsInWorkspace=Some projects were hidden because they exist in the workspace directory
+WizardProjectsImportPage_projectsInWorkspace=Some projects cannot be imported because they already exist in the workspace
 WizardProjectsImportPage_CreateProjectsTask=Creating Projects
 WizardProjectsImportPage_ImportProjectsDescription=Select a directory to search for existing Eclipse projects.
 WizardProjectsImportPage_CheckingMessage= Checking: {0}
