Bug 259954 [Import/Export] Warning should be displayed when no projects are available in the archive/directory

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/wizards/datatransfer/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/wizards/datatransfer/messages.properties
@@ -89,6 +89,7 @@ WizardProjectsImportPage_SearchingMessage=Searching for projects
 WizardExternalProjectImportPage_errorMessage = Creation Problems
 WizardProjectsImportPage_ImportProjectsTitle=Import Projects
 WizardProjectsImportPage_projectsInWorkspace=Some projects cannot be imported because they already exist in the workspace
+WizardProjectsImportPage_noProjectsToImport=No projects are found to import
 WizardProjectsImportPage_CreateProjectsTask=Creating Projects
 WizardProjectsImportPage_ImportProjectsDescription=Select a directory to search for existing Eclipse projects.
 WizardProjectsImportPage_CheckingMessage= Checking: {0}
