--- a/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
+++ b/update/org.eclipse.update.core/src/org/eclipse/update/internal/core/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -287,6 +287,6 @@ SiteOptimizer_inputFileNotFound = The input file \"{0}\" was not found.
 HttpResponse_rangeExpected = Server does not support ranges.
 HttpResponse_wrongRange = Server returned wrong range.
 DefaultSiteParser_mirrors = Error processing update site mirror.
-FeatureExecutableContentProvider_UnableToRetriveArchiveContentRef = Unable to retreive archive content reference
+FeatureExecutableContentProvider_UnableToRetriveArchiveContentRef = Unable to retrieve archive content reference
 SiteCategory_other_label = Other
 SiteCategory_other_description = Features found under this category are either not categorized or their categories could not be found on server.
