Bug 162102 [Workbench] User configurability for MAX_RECENT_WORKSPACES

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -269,6 +269,10 @@ BuildAction_operationMessage = Building project...
 
 RebuildAction_text = Rebuild Pro&ject
 RebuildAction_tooltip = Full Build Of Selected Projects
+RecentWorkspacesPreferencePage_NumberOfWorkspaces_label=&Number of recent workspaces to remember:
+RecentWorkspacesPreferencePage_PromptAtStartup_label=Prompt for &workspace on startup
+RecentWorkspacesPreferencePage_RecentWorkspacesList_label=Recent workspaces
+RecentWorkspacesPreferencePage_RemoveButton_label=&Remove
 
 RefreshAction_text = Re&fresh
 RefreshAction_toolTip = Refresh
