Bug 248103 [PropertiesView] Multi-instance Properties View

--- a/bundles/org.eclipse.ui.views/src/org/eclipse/ui/internal/views/properties/messages.properties
+++ b/bundles/org.eclipse.ui.views/src/org/eclipse/ui/internal/views/properties/messages.properties
@@ -29,6 +29,10 @@ Defaults_toolTip = Restore Default Value
 Filter_text = Show &Advanced Properties
 Filter_toolTip = Show Advanced Properties
 
+Selection_description = Selection from {0}
+Pin_text = &Pin to Selection
+Pin_toolTip = Pins this property view to the current selection
+
 PropertyViewer_property = Property
 PropertyViewer_value = Value
 PropertyViewer_misc = Misc
