Bug 265277 - [Net] Unknownhostexception: http

--- a/bundles/org.eclipse.ui.net/src/org/eclipse/ui/internal/net/messages.properties
+++ b/bundles/org.eclipse.ui.net/src/org/eclipse/ui/internal/net/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -48,6 +48,7 @@ ProxyEntryDialog_9=Setting for provided type is already defined
 ProxyEntryDialog_10=Invalid host name
 ProxyEntryDialog_11=Invalid port number
 ProxyEntryDialog_12=Invalid user ID
+ProxyEntryDialog_13=Host name can not be prefixed with schema
 
 ProxyBypassDialog_0=Proxy bypass hosts
 ProxyBypassDialog_1=Enter host names separated by a semicolon or a space.
