bug 232766: The 'Specify Repository Information' dialog is not accessible

--- a/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ui/src/org/eclipse/team/internal/ccvs/ui/messages.properties
@@ -287,7 +287,7 @@ CommitWizardFileTypePage_3=New files with the following unknown names or extensi
 
 ConfigureRepositoryLocationsWizard_title=Specify Repository Information
 ConfigureRepositoryLocationsWizard_message=The project set only contains partial repository information. You may use the table below to specify the complete repository information for each repository in the project set or click OK to use the default repository location.
-ConfigureRepositoryLocationsWizard_createLocation=Create Location
+ConfigureRepositoryLocationsWizard_createLocation=&Create Location...
 ConfigureRepositoryLocationsWizard_createLocationTooltip=Creates a new repository location
 ConfigureRepositoryLocationsWizard_column0=Project set repository information
 ConfigureRepositoryLocationsWizard_column1=Repository Location
