Bug 247628 - [changeset] Having 2 edit actions in context menu is confusing

--- a/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
+++ b/bundles/org.eclipse.team.ui/src/org/eclipse/team/internal/ui/messages.properties
@@ -380,16 +380,17 @@ FlatModelProvider_8=&Path
 FlatModelProvider_9=&Parent Name
 FlatModelProvider_0=Flat
 
-ChangeLogModelProvider_0a=Sort &Comments By
+ChangeLogModelProvider_0a=Sort Incoming &Change Sets By
 ChangeLogModelProvider_1a=&Comment
 ChangeLogModelProvider_2a=&Date
 ChangeLogModelProvider_3a=&User
 ChangeLogModelProvider_0=&New Change Set...
-ChangeLogModelProvider_12=Add &To
+ChangeLogModelProvider_12=Reassign Changes &To
+ChangeLogModelProvider_13=Assign Changes &To
 ChangeLogModelProvider_5=Commit &Sets
 ChangeLogModelProvider_6=Ed&it Change Set...
-ChangeLogModelProvider_7=Remove Change Set
-ChangeLogModelProvider_9=Make De&fault
+ChangeLogModelProvider_7=Make Changes Unassigned
+ChangeLogModelProvider_9=Mark Change Set As De&fault
 ChangeLogModelManager_0=Show Change Sets
 ChangeSetActionGroup_0=Confirm Remove
 ChangeSetActionGroup_1=Are you sure you want to remove {0}
