Bug 270536  [Help] Pseudolocalization problems in remote help preferences

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -196,7 +196,6 @@ AddICDialog_5=&Host:
 AddICDialog_7=&Path:
 AddICDialog_9=Use &default port
 AddICDialog_10=Use p&ort:
-AddICDialog_11=80
 AddICDialog_17=You must specify a Host
 AddICDialog_19=Port must be an integer between 0 and 65535
 HelpContentBlock_3=Disable
@@ -219,6 +218,7 @@ TestConnectionDialog_4=Test Connection
 TestConnectionDialog_6=Testing Connection to {0}
 TestConnectionDialog_12=Connection Status: Successful
 TestConnectionDialog_13=Connection Status: Failed
+TestConnectionDialog_URL_With_Param=URL: {0}
 ViewICPropsDialog_6=Test Connection
 ViewICPropsDialog_7=Close
 ViewICPropsDialog_8=Properties for {0}
@@ -231,3 +231,4 @@ ViewICPropsDialog_20=Enabled
 ViewICPropsDialog_21=Disabled
 ViewICPropsDialog_23=\ Connected
 ViewICPropsDialog_24=\ Not Connected
+ViewICPropsDialog_URL=URL: 
