--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -268,7 +268,9 @@ synchronizer_partnerNotRegistered = Sync partner: {0} not registered with the sy
 
 ### URL
 url_badVariant = Unsupported \"platform:\" protocol variation {0}.
-url_couldNotResolve = Project ''{0}'' does not exist.  Could not resolve URL: {1}.
+url_couldNotResolve_projectDoesNotExist = Project ''{0}'' does not exist.  Could not resolve URL: {1}.
+url_couldNotResolve_URLProtocolHandlerCanNotResolveURL = A protocol handler does not exist or can not resolve URL ''{0}'' into URL with file protocol. Could not resolve URL: {1}.
+url_couldNotResolve_resourceLocationCanNotBeDetermined = Resource location ''{0}'' can not be determined. Could not resolve URL: {1}.
 
 ### utils
 utils_clone = Clone not supported.
