Bug 139220 – [Help] TOC icons and labels for help view and window should be the same:

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -29,7 +29,7 @@ LaunchURL_exception = Exception occurred when opening URL.  Refer to the log for
 
 #Help View
 ReusableHelpPart_searchPage_name=Search
-ReusableHelpPart_allTopicsPage_name=All Topics
+ReusableHelpPart_allTopicsPage_name=Contents
 ReusableHelpPart_bookmarksPage_name=Bookmarks
 ReusableHelpPart_contextHelpPage_name=Related Topics
 ReusableHelpPart_back_label=&Back
@@ -54,7 +54,7 @@ expression_label = * = any string, ? = any character, "" = phrase, AND, OR, NOT 
 limit_to = Search scope
 
 SeeAlsoPart_search=Search
-SeeAlsoPart_allTopics=All Topics
+SeeAlsoPart_allTopics=Contents
 SeeAlsoPart_goto=Go To:
 SeeAlsoPart_contextHelp=Related Topics
 SeeAlsoPart_bookmarks = Bookmarks
@@ -154,7 +154,7 @@ BrowserPart_showExternalTooltip=Show in external window
 BrowserPart_bookmarkTooltip=Bookmark document
 BrowserPart_highlightTooltip=Highlight Search Terms
 BrowserPart_printTooltip=Print
-BrowserPart_syncTocTooltip = Show in All Topics
+BrowserPart_syncTocTooltip = Show in Contents
 InfoCenterPage_url = &URL:
 InfoCenterPage_invalidURL=Invalid URL
 InfoCenterPage_tocError=Error while loading table of contents
