Bug 213265 – [help] accessibility-Duplicate keyword shortcut in content page:

--- a/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
+++ b/org.eclipse.help.ui/src/org/eclipse/help/ui/internal/Messages.properties
@@ -183,26 +183,26 @@ IndexButton = Display
 NoWorkbenchForExecuteCommand_msg = No workbench available for command execution.
 
 HelpContentPage_title = Remote Infocenters:
-HelpContentBlock_addICTitle = Add
-HelpContentBlock_editICTitle = Edit 
-HelpContentBlock_removeICTitle = Delete
-HelpContentBlock_viewICTitle = View Properties
-HelpContentBlock_testConnectionTitle = Test Connection
-HelpContentBlock_rmvTitle=Remove {0} Infocenter
+HelpContentBlock_addICTitle = &New
+HelpContentBlock_editICTitle = &Edit 
+HelpContentBlock_removeICTitle = De&lete
+HelpContentBlock_viewICTitle = &View Properties
+HelpContentBlock_testConnectionTitle = &Test Connection
+HelpContentBlock_rmvTitle=Remove {0} &Infocenter
 HelpContentBlock_rmvLabel=Are you sure you want to remove {0}?
 AddICDialog_2=Add new infocenter
-AddICDialog_4=Name:
+AddICDialog_4=&Name:
 AddICDialog_5=&Host:
 AddICDialog_7=&Path:
 AddICDialog_9=Use &default port
 AddICDialog_10=Use p&ort:
 AddICDialog_17=You must specify a Host
 AddICDialog_19=Port must be an integer between 0 and 65535
-HelpContentBlock_3=Disable
-HelpContentBlock_4=Enable
+HelpContentBlock_3=Disa&ble
+HelpContentBlock_4=Ena&ble
 
 EditICDialog_7=Edit {0} infocenter
-EditICDialog_10=Name:
+EditICDialog_10=&Name:
 EditICDialog_11=&Host:
 EditICDialog_12=&Path:
 EditICDialog_13=Use &default port
@@ -219,12 +219,12 @@ TestConnectionDialog_6=Testing Connection to {0}
 TestConnectionDialog_12=Connection Status: Successful
 TestConnectionDialog_13=Connection Status: Failed
 TestConnectionDialog_URL_With_Param=URL: {0}
-ViewICPropsDialog_6=Test Connection
-ViewICPropsDialog_7=Close
+ViewICPropsDialog_6=&Test Connection
+ViewICPropsDialog_7=&Close
 ViewICPropsDialog_8=Properties for {0}
 ViewICPropsDialog_10=Name:
-ViewICPropsDialog_11=&Host:
-ViewICPropsDialog_12=&Path:
+ViewICPropsDialog_11=Host:
+ViewICPropsDialog_12=Path:
 ViewICPropsDialog_13=Port: 
 ViewICPropsDialog_19=Status: 
 ViewICPropsDialog_20=Enabled
