Bug 273147 Report build problems as ERROR severity

--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -24,7 +24,7 @@ dtree_switchError = Switch error in DeltaTreeReader.readNode().
 events_builderError = Errors running builder ''{0}'' on project ''{1}''.
 events_building_0 = Building workspace
 events_building_1 = Building ''{0}''
-events_errors = Errors during build.
+events_errors = Errors occurred during the build.
 events_instantiate_1 = Error instantiating builder ''{0}''.
 events_invoking_1 = Invoking builder on ''{0}''.
 events_invoking_2 = Invoking ''{0}'' on ''{1}''.
