Bug 257167 - Shutdown takes too long

--- a/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
+++ b/bundles/org.eclipse.core.resources/src/org/eclipse/core/internal/utils/messages.properties
@@ -219,6 +219,7 @@ resources_pathNull = Paths must not be null.
 resources_projectDesc = Problems encountered while setting project description.
 resources_projectDescSync = Could not set the project description for ''{0}'' because the project description file (.project) is out of sync with the file system.
 resources_projectPath = Path for project must have only one segment.
+resources_pruningHistory = Pruning history.
 resources_reading = Reading.
 resources_readingSnap = Reading snapshot.
 resources_readingEncoding = Could not read encoding settings.
