--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/internal/ide/messages.properties
@@ -17,7 +17,7 @@
 # package: org.eclipse.ui.ide
 
 IDEWorkbenchAdvisor_noPerspective=No perspectives are open. To open a perspective, press this button:
-IDEWorkbenchAdvisor_clickToSkipHistoryPruning=Click Cancel to safely skip local history pruning.
+IDEWorkbenchAdvisor_cancelHistoryPruning=Cancel to skip reducing history space.
 
 IDE_noFileEditorFound = No editor found to edit the file resource.
 IDE_sideEffectWarning=Potential side effects have been identified.
