Bug 275045 [Markers] Configure contents - inconsistent colon in labels

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -79,7 +79,7 @@ filtersDialog_conflictingName =  A filter already exists with the name {0}
 filtersDialogDeselectedFiltersTitle = Confirm Show All
 filtersDialogDeselectedFiltersMessage = You have not checked any configurations. This will show all entries. Continue?
 
-filtersDialog_descriptionLabel = Descri&ption 
+filtersDialog_descriptionLabel = Descri&ption: 
 filtersDialog_contains = contains
 filtersDialog_doesNotContain = doesn't contain
 filtersDialog_severityLabel = Where severit&y is:
@@ -104,7 +104,7 @@ configureFiltersCommand_title = &Configure Contents...
 configureFiltersDialog_title = Configure Contents
 
 propertiesDialog_creationTime_text = Creation &time: 
-propertiesDialog_description_text = &Description: 
+propertiesDialog_description_text = &Description 
 propertiesDialog_folder_text = In &folder: 
 propertiesDialog_location_text = &Location: 
 propertiesDialog_resource_text = On &element: 
