bug 275057: Make old ssh fragment optional

--- a/bundles/org.eclipse.team.cvs.ssh2/src/org/eclipse/team/internal/ccvs/ssh2/messages.properties
+++ b/bundles/org.eclipse.team.cvs.ssh2/src/org/eclipse/team/internal/ccvs/ssh2/messages.properties
@@ -55,6 +55,7 @@ CVSSSH2PreferencePage_111=Failed to export ssh key to remote server.
 CVSSSH2ServerConnection_3=session is down
 CVSSSH2ServerConnection_0=An undetermined authentication failure has occurred
 CVSSSH2ServerConnection_1=No route to host {0} could be found
+CVSSSH2ServerConnection_4=Support for SSH-1 connection method required by the remote server is not available.
 CVSSSH2PreferencePage_information=Information
 CVSSSH2PreferencePage_error=Error
 CVSSSH2PreferencePage_confirmation=Confirmation
