Fixed bug 275809: [Markers] Can no longer toggle description in Problem view's contents configuration dialog

--- a/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
+++ b/bundles/org.eclipse.ui.ide/src/org/eclipse/ui/views/markers/internal/messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -178,7 +178,7 @@ MarkerFilter_defaultFilterName=Default
 MarkerFilter_newFilterName=New Filter
 MarkerFilter_filtersTitle=User f&ilters:
 MarkerFilter_addFilterName=&New...
-MarkerFilter_cloneFilterName=&Duplicate...
+MarkerFilter_cloneFilterName=D&uplicate...
 MarkerFilter_deleteSelectedName = Remo&ve
 MarkerFilter_showAllCommand_title = &Show All
 MarkerFilter_ConfigureContentsCommand_title = &Configure Contents...
